--- a/Buoi6/signup.html
+++ b/Buoi6/signup.html
@@ -26,7 +26,9 @@
                     <label for="remember-me" class="remember">Remember me</label>
                     <a href="" class="forgot">Forgot your password?</a>
                 </fieldset>
-                <input type="submit" value="Sign in">
+                <div class="Signin">
+                <a href="../Buoi6/home.html"> Sign in</a>
+            </div>
             </form>
         </div>
     </div>
