--- a/home/login.html
+++ b/home/login.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign in</title>
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="../home/login.css">
 </head>
 <body>
     <header></header>
@@ -25,7 +25,7 @@
                     <label for="remember-me" class="remember">Remember me</label>
                     <a href="" class="forgot">Forgot your password?</a>
                 </fieldset>
-                <input type="submit" value="Sign in">
+                <a href="../Buoi6/home.html"> Sign in</a>
             </form>
         </div>
     </div>
